dnl Process this file with autoconf to produce a configure script.
AC_INIT(opsb.c)
AC_CONFIG_HEADER(modconfig.h)
PACKAGE=OPSB
VERSION=2.0
DIRINST=~/NeoStats/
AC_PREFIX_DEFAULT(~/NeoStats/)
CFLAGS="$CFLAGS -O2 -Wall"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL 
ETR_SOCKET_NSL

dnl Checks for header files.
AC_HEADER_STDC

AC_CHECK_HEADERS(sys/poll.h, have_poll_sys_h=yes, have_sys_poll_h=no)

AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h strings.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

AC_FUNC_SNPRINTF

dnl if they want select() or they don't have poll() then we need to check
dnl that we actually have select()
if test "$have_sys_poll_h" = "no"; then
 AC_CHECK_FUNCS(select, have_select=yes, have_select=no)
 if test "$have_select" = "no"; then
   AC_MSG_ERROR([No select() implementation found])
 fi
fi

AC_CHECK_FUNCS(inet_aton inet_pton)

dnl Check if we can use gethostbyname2 for ipv6
AC_CHECK_FUNCS(gethostbyname gethostbyname2)

dnl AIX fun
AC_C_BIGENDIAN

dnl Solaris has to be weird doesn't it...
AC_CHECK_LIB(socket, socket, AC_SUBST(LSOCKET, [-lsocket]))
AC_CHECK_LIB(nsl, gethostbyname, AC_SUBST(LNSL, [-lnsl]))







AC_MSG_CHECKING(Location of NeoStats...)
AC_ARG_WITH(neostats, 
[  --with-neostats=DIR	  Location of NeoStats installation],
[DIRINST=$withval])
AC_MSG_RESULT($DIRINST)


AC_CHECK_FILE($DIRINST/include/dl.h, 
[INCLUDEDIR="$DIRINST/include/"], 
[AC_MSG_ERROR(Can't find existing NeoStats Installation please supply with --with-neostats option)])


CPPFLAGS="$CPPFLAGS -I$INCLUDEDIR"
dnl Check we are running the latest supported version of NeoStats
AC_MSG_CHECKING(Version of NeoStats...)
AC_TRY_RUN(
[
#include <config.h>
#include <stdlib.h>
int main(void) {
	if (MAJOR >= 2) {
		if (MINOR >= 5) {
			if (REV >= 8) {
				exit(0);
			}
		}
	}
	exit(1);
}
],	ns_version_ok='yes',
	ns_version_ok='no',
	ns_version_ok='no')
if test "$ns_version_ok" = "yes"; then
	AC_MSG_RESULT(Compatible Version);
else
	AC_MSG_ERROR(This Module requires NeoStats 2.5.8 or Higher)
fi




dnl check if we are running with Debug....
AC_MSG_CHECKING(Whether to Enable Debuging...)
AC_ARG_ENABLE(debug,
[ --enable-debug - Enable Debuging],
[ case "$enableval" in
  yes)
        CFLAGS="$CFLAGS -ggdb"
	AC_DEFINE(DEBUG,1)
        AC_MSG_RESULT(yes - Watch your Log Files)
        ;;
  *)
        AC_MSG_RESULT(no)
        ;;
  esac],
AC_MSG_RESULT(no)
)

AC_SUBST(DIRINST)
AC_SUBST(CFLAGS)
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_OUTPUT(Makefile libopm/Makefile)
echo "(*----------------------------------------------------------*)"
echo "(| Important Instructions                                   |)"
echo "(*----------------------------------------------------------*)"
echo "(| To compile your module, please type 'make'               |)"
echo "(| If make completes without errors, then you               |)"
echo "(| Must 'make install', but please be sure that NeoStats    |)"
echo "(| Is not currently running with a module of the same name  |)"
echo "(| Running, otherwise Make install will not work            |)"
echo "(| !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! |)"
echo "(| If you are running a BSD, make install may produce a     |)"
echo "(| Error, if that is the case, then please manually copy    |)"
echo "(| opsb.so to the NeoStats/dl directory                     |)"
echo "(| !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! |)"
echo "(*----------------------------------------------------------*)"
echo "(| For Support please visit:                                |)"
echo "(|    IRC:                   /server irc.irc-chat.org       |)"
echo "(|                                   #neostats channel      |)"
echo "(|    WWW:   http://www.neostats.net/boards/                |)"
echo "(*----------------------------------------------------------*)"
echo "(|This Module was written by:                               |)"
echo "(|	fish (fish@dynam.ac)                                |)"
echo "(*----------------------------------------------------------*)"